--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Project_MyFit">
-        <activity android:name=".ui.main.category_activity.AddCategoryActivity" />
+        android:theme="@style/Theme.Project_MyFit"
+        android:fullBackupContent="true">
         <activity android:name=".MainActivity"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
