--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,7 @@ dependencies {
 
     //Elastic View
     implementation 'com.github.armcha:ElasticView:0.2.0'
+
+    //Gson
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
