--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.3.2'
     implementation 'androidx.navigation:navigation-ui:2.3.2'
 
+
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     //LiveData, ViewModel
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
@@ -62,6 +63,9 @@ dependencies {
     //Scalable Size Uint
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
+
+    //Gson
+    implementation 'com.google.code.gson:gson:2.8.6'
 
     //SwipeRevealLayout
     implementation 'com.chauthai.swipereveallayout:swipe-reveal-layout:1.4.1'
