--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,9 +72,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
-    //glideToVector
-    implementation 'com.github.corouteam:GlideToVectorYou:v2.0.0'
-
     //dragSelect
     implementation 'com.github.MFlisar:DragSelectRecyclerView:0.3'
+
+    implementation 'com.github.bmelnychuk:atv:1.2.+'
 }
