--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,8 +44,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     //navigation
-    implementation 'androidx.navigation:navigation-fragment:2.3.2'
-    implementation 'androidx.navigation:navigation-ui:2.3.2'
+    implementation 'androidx.navigation:navigation-fragment:2.3.3'
+    implementation 'androidx.navigation:navigation-ui:2.3.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     //liveData, viewModel
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
@@ -65,9 +65,6 @@ dependencies {
     //gson
     implementation 'com.google.code.gson:gson:2.8.6'
 
-    //swipeRevealLayout
-    implementation 'com.chauthai.swipereveallayout:swipe-reveal-layout:1.4.1'
-
     //glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
@@ -76,5 +73,7 @@ dependencies {
     implementation 'com.github.MFlisar:DragSelectRecyclerView:0.3'
 
     //treeView
-    implementation 'com.github.bmelnychuk:atv:1.2.+'
+    implementation 'com.github.bmelnychuk:atv:1.2.9'
+
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.6'
 }
