패키지 네임, 클래스 네임, xml 네임 전체 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Project_MyFit">
-        <activity android:name=".trash.TrashActivity" />
-        <activity android:name=".searchActivity.SearchActivity" />
+        <activity android:name=".recycler_bin.RecycleBinActivity" />
+        <activity android:name=".search_activity.SearchActivity" />
         <activity
             android:name=".MainActivity"
             android:windowSoftInputMode="adjustResize">
