패키지 네임 변경

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Project_MyFit">
-        <activity android:name=".recycler_bin_activity.RecycleBinActivity" />
+        <activity android:name=".recycle_bin_activity.RecycleBinActivity" />
         <activity android:name=".search_activity.SearchActivity" />
         <activity
             android:name=".MainActivity"
