--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,7 @@
-plugins {
-    id 'com.android.application'
-    id 'androidx.navigation.safeargs'
-    id 'dagger.hilt.android.plugin'
-}
+apply plugin: 'com.android.application'
+apply plugin: 'androidx.navigation.safeargs'
+apply plugin: 'dagger.hilt.android.plugin'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 30
@@ -89,5 +88,14 @@ dependencies {
     implementation 'com.google.dagger:hilt-android:2.37'
     annotationProcessor 'com.google.dagger:hilt-compiler:2.37'
     implementation 'androidx.hilt:hilt-navigation-fragment:1.0.0'
+
+    //firebase
+    implementation platform('com.google.firebase:firebase-bom:28.1.0')
+    implementation 'com.google.firebase:firebase-analytics'
+
+    //firebase auth
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+
 //    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.6'
 }
