--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:4.2.1'
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.37'
+        classpath 'com.google.gms:google-services:4.3.8'
     }
 }
 
