--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,11 +9,12 @@ android {
 
     defaultConfig {
         applicationId "com.leebeebeom.closetnote"
-        minSdkVersion 27
+        minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
+        vectorDrawables.useSupportLibrary = true
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -45,7 +46,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
 
     implementation "androidx.recyclerview:recyclerview:1.2.1"
-
+    implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -92,10 +93,12 @@ dependencies {
     //firebase
     implementation platform('com.google.firebase:firebase-bom:28.1.0')
     implementation 'com.google.firebase:firebase-analytics'
-
-    //firebase auth
-    implementation 'com.google.firebase:firebase-auth:21.0.1'
+    implementation 'com.google.firebase:firebase-auth'
+    //google
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
-
+    //naver
+    implementation files('libs/naveridlogin_android_sdk_4.2.6.aar')
+    //kakao
+    implementation "com.kakao.sdk:v2-user:2.5.2"
 //    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.6'
 }
