--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ allprojects {
         google()
         mavenCentral()
         maven { url "https://jitpack.io" }
-
+        maven { url 'https://devrepo.kakao.com/nexus/content/groups/public/' }
     }
 }
 
