--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,5 +100,8 @@ dependencies {
     implementation files('libs/naveridlogin_android_sdk_4.2.6.aar')
     //kakao
     implementation "com.kakao.sdk:v2-user:2.5.2"
+
+    //circle image view
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 //    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.6'
 }
