--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,6 +102,6 @@ dependencies {
     implementation "com.kakao.sdk:v2-user:2.5.2"
 
     //circle image view
-    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.mikhaellopez:circularimageview:4.3.0'
 //    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.6'
 }
