--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,13 +9,10 @@ android {
 
     defaultConfig {
         applicationId "com.leebeebeom.closetnote"
-        minSdkVersion 19
+        minSdkVersion 27
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-        vectorDrawables.useSupportLibrary = true
-        multiDexEnabled true
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -28,19 +25,15 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    //DataBinding
     buildFeatures {
         dataBinding = true
     }
-
-    repositories {
-        google()
-        mavenCentral()
-    }
-
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
+    implementation 'androidx.preference:preference:1.1.1'
+
     //lombok
     compileOnly 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
@@ -48,7 +41,7 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.2.1"
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     //navigation
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
@@ -65,8 +58,8 @@ dependencies {
     annotationProcessor 'androidx.room:room-compiler:2.3.0'
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     //scalableSizeUnit
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
