--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,5 +96,7 @@ dependencies {
 
     //circle image view
     implementation 'com.mikhaellopez:circularimageview:4.3.0'
+
+    implementation 'net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:3.0.0-RC3'
 //    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.6'
 }
